--- a/index.html
+++ b/index.html
@@ -1,99 +1,159 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>GrapesJS Preset Webpage</title>
-    <link href="https://unpkg.com/grapesjs/dist/css/grapes.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/grapesjs"></script>
-    <style>
-      body,
-      html {
-        height: 100%;
-        margin: 0;
-      }
-    </style>
-  </head>
-  <body>
+	<head>
+		<meta charset="utf-8">
+		<title>GrapesJS Preset Webpage</title>
+		<link href="http://[::1]:5173/assets/resources/css/editor.css" rel="stylesheet">
+		<script src="https://unpkg.com/grapesjs"></script>
+		<style>
+			body,
+			html {
+				height: 100%;
+				margin: 0;
+			}
+		</style>
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Overpass:ital,wght@0,100..900;1,100..900&family=Righteous&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
+		</style>
+	</head>
+	<body>
+		<div class="editor__container">
+			<div class="editor__header">
+				<div class="editor__header__wrapper">
+					<div class="editor__header__wrapper--left">
 
-    <div id="gjs" style="height:0px; overflow:hidden">
-      <div class="panel">
-        <h1 class="welcome">Welcome to</h1>
-        <div class="big-title">
-          <svg class="logo" viewBox="0 0 100 100">
-            <path d="M40 5l-12.9 7.4 -12.9 7.4c-1.4 0.8-2.7 2.3-3.7 3.9 -0.9 1.6-1.5 3.5-1.5 5.1v14.9 14.9c0 1.7 0.6 3.5 1.5 5.1 0.9 1.6 2.2 3.1 3.7 3.9l12.9 7.4 12.9 7.4c1.4 0.8 3.3 1.2 5.2 1.2 1.9 0 3.8-0.4 5.2-1.2l12.9-7.4 12.9-7.4c1.4-0.8 2.7-2.2 3.7-3.9 0.9-1.6 1.5-3.5 1.5-5.1v-14.9 -12.7c0-4.6-3.8-6-6.8-4.2l-28 16.2"/>
-          </svg>
-          <span>GrapesJS</span>
-        </div>
-        <div class="description">
-          This is a demo content from index.html. For the development, you shouldn't edit this file, instead you can
-          copy and rename it to _index.html, on next server start the new file will be served, and it will be ignored by git.
-        </div>
-      </div>
-      <style>
-        .panel {
-          width: 90%;
-          max-width: 700px;
-          border-radius: 3px;
-          padding: 30px 20px;
-          margin: 150px auto 0px;
-          background-color: #d983a6;
-          box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
-          color:rgba(255,255,255,0.75);
-          font: caption;
-          font-weight: 100;
-        }
+					</div>
+					<div class="editor__header__wrapper--center">
 
-        .welcome {
-          text-align: center;
-          font-weight: 100;
-          margin: 0px;
-        }
+					</div>
+					<div class="editor__header__wrapper--right">
+						
+					</div>
+				</div>
+				<div class="editor__header__title">GrapesJS</div>
+				<div class="editor__header__actions">
 
-        .logo {
-          width: 70px;
-          height: 70px;
-          vertical-align: middle;
-        }
+				</div>
+			</div>
+		</div>
+		<div id="gjs" style="height:0px; overflow:hidden">
+			<div class="panel">
+				<h1 class="welcome">Welcome to</h1>
+				<div class="big-title">
+					<svg class="logo" viewBox="0 0 100 100">
+						<path d="M40 5l-12.9 7.4 -12.9 7.4c-1.4 0.8-2.7 2.3-3.7 3.9 -0.9 1.6-1.5 3.5-1.5 5.1v14.9 14.9c0 1.7 0.6 3.5 1.5 5.1 0.9 1.6 2.2 3.1 3.7 3.9l12.9 7.4 12.9 7.4c1.4 0.8 3.3 1.2 5.2 1.2 1.9 0 3.8-0.4 5.2-1.2l12.9-7.4 12.9-7.4c1.4-0.8 2.7-2.2 3.7-3.9 0.9-1.6 1.5-3.5 1.5-5.1v-14.9 -12.7c0-4.6-3.8-6-6.8-4.2l-28 16.2"/>
+					</svg>
+					<span>GrapesJS</span>
+				</div>
+				<div class="description">
+					This is a demo content from index.html. For the development, you shouldn't edit this file, instead you can
+					copy and rename it to _index.html, on next server start the new file will be served, and it will be ignored by git.
+				</div>
+			</div>
+			<style>
+				.panel {
+					width: 90%;
+					max-width: 700px;
+					border-radius: 3px;
+					padding: 30px 20px;
+					margin: 150px auto 0px;
+					background-color: #d983a6;
+					box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
+					color:rgba(255,255,255,0.75);
+					font: caption;
+					font-weight: 100;
+				}
 
-        .logo path {
-          pointer-events: none;
-          fill: none;
-          stroke-linecap: round;
-          stroke-width: 7;
-          stroke: #fff
-        }
+				.welcome {
+					text-align: center;
+					font-weight: 100;
+					margin: 0px;
+				}
 
-        .big-title {
-          text-align: center;
-          font-size: 3.5rem;
-          margin: 15px 0;
-        }
+				.logo {
+					width: 70px;
+					height: 70px;
+					vertical-align: middle;
+				}
 
-        .description {
-          text-align: justify;
-          font-size: 1rem;
-          line-height: 1.5rem;
-        }
-      </style>
-    </div>
+				.logo path {
+					pointer-events: none;
+					fill: none;
+					stroke-linecap: round;
+					stroke-width: 7;
+					stroke: #fff
+				}
+
+				.big-title {
+					text-align: center;
+					font-size: 3.5rem;
+					margin: 15px 0;
+				}
+
+				.description {
+					text-align: justify;
+					font-size: 1rem;
+					line-height: 1.5rem;
+				}
+			</style>
+		</div>
 
 
-    <script type="text/javascript">
-      window.onload = () => {
-        window.editor = grapesjs.init({
-          height: '100%',
-          showOffsets: true,
-          noticeOnUnload: false,
-          storageManager: false,
-          container: '#gjs',
-          fromElement: true,
+		<script type="text/javascript">
+			window.onload = () => {
+				var editor = grapesjs.init({
+					height: '100%',
+					showOffsets: true,
+					noticeOnUnload: false,
+					storageManager: false,
+					container: '#gjs',
+					fromElement: true,
+					plugins: ['grapesjs-preset-webpage'],
+					pluginsOpts: {
+						'grapesjs-preset-webpage': {}
+					}
+				});
 
-          plugins: ['grapesjs-preset-webpage'],
-          pluginsOpts: {
-            'grapesjs-preset-webpage': {}
-          }
-        });
-      };
-    </script>
-  </body>
+				editor.Panels.addPanel({
+					id: 'editor-header',
+					el: '.editor__header',
+				});
+				editor.Panels.addPanel({
+					id: 'basic-actions',
+					el: '.editor__header__actions',
+				buttons: [
+					{
+						id: 'visibility',
+						active: true, // active by default
+						className: 'btn-toggle-borders',
+						label: '<u>B</u>',
+						command: 'sw-visibility', // Built-in command
+					},
+					{
+						id: 'export',
+						className: 'btn-open-export',
+						label: 'Exp',
+						command: 'export-template',
+						context: 'export-template', // For grouping context of buttons from the same panel
+					},
+					{
+						id: 'show-json',
+						className: 'btn-show-json',
+						label: 'JSON',
+						context: 'show-json',
+						command(editor) {
+							editor.Modal.setTitle('Components JSON')
+							.setContent(
+								`<textarea style="width:100%; height: 250px;">
+								${JSON.stringify(editor.getComponents())}
+							</textarea>`,
+							)
+							.open();
+						},
+					},
+				]});
+			};
+		</script>
+	</body>
 </html>
